[gd_scene load_steps=22 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/frgo_editorIcon01.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Scenes/ItemSelectionScreen.gd" type="Script" id=2]
[ext_resource path="res://RainIsoMainContents/Scenes/ScrollContainer.gd" type="Script" id=3]
[ext_resource path="res://RainIsoMainContents/Scenes/ItemDefaultTest.tscn" type="PackedScene" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/EditorTile02.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/frgo_editorIcon02.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/frgo_editorIcon04.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Resources/EditorTile05.png" type="Texture" id=8]
[ext_resource path="res://RainIsoMainContents/Resources/frgo_editorIcon05.png" type="Texture" id=9]
[ext_resource path="res://RainIsoMainContents/Resources/EditorTile03.png" type="Texture" id=10]
[ext_resource path="res://RainIsoMainContents/Resources/EditorTile04.png" type="Texture" id=11]
[ext_resource path="res://RainIsoMainContents/Resources/frgo_editorIcon03.png" type="Texture" id=12]
[ext_resource path="res://RainIsoMainContents/Resources/rainiso_trashIcon.png" type="Texture" id=13]
[ext_resource path="res://RainIsoMainContents/Resources/EditorTile01.png" type="Texture" id=14]
[ext_resource path="res://RainIsoMainContents/Resources/EditorTile06.png" type="Texture" id=15]
[ext_resource path="res://RainIsoMainContents/Resources/frgo_editorIcon07.png" type="Texture" id=16]
[ext_resource path="res://RainIsoMainContents/Scenes/Entity.tscn" type="PackedScene" id=18]
[ext_resource path="res://RainIsoMainContents/Scenes/ItemSelectionScreenControl.gd" type="Script" id=33]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_color = Color( 0, 0, 0, 0.196078 )
shadow_size = 16

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.843137, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Icon:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 16, 16 ), Vector2( 16, 12 ) ]
}

[node name="ItemSelectionScreen" type="CanvasLayer"]
layer = 2
script = ExtResource( 33 )

[node name="PanelSide" type="Panel" parent="."]
show_behind_parent = true
margin_right = 192.0
margin_bottom = 719.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -144.0
margin_right = -480.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 200, 88 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="Control" parent="TabContainer/ScrollContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/ScrollContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTiles" parent="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
material = null
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 64.0
texture = ExtResource( 14 )
this_scene = ExtResource( 18 )
tile = true
tile_id = 453

[node name="ItemTiles2" parent="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
material = null
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_right = 68.0
margin_bottom = 64.0
texture = ExtResource( 5 )
this_scene = ExtResource( 18 )
tile = true
tile_id = 442

[node name="ItemTiles3" parent="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
material = null
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_right = 104.0
margin_bottom = 64.0
texture = ExtResource( 10 )
this_scene = ExtResource( 18 )
tile = true
tile_id = 465

[node name="ItemTiles4" parent="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
material = null
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_right = 140.0
margin_bottom = 64.0
texture = ExtResource( 11 )
this_scene = ExtResource( 18 )
tile = true
tile_id = 466

[node name="ItemTiles5" parent="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
material = null
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 144.0
margin_right = 176.0
margin_bottom = 64.0
texture = ExtResource( 8 )
this_scene = ExtResource( 18 )
tile = true
tile_id = 456

[node name="ItemTiles6" parent="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
material = null
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_right = 212.0
margin_bottom = 64.0
texture = ExtResource( 15 )
this_scene = ExtResource( 18 )
tile = true
tile_id = 443

[node name="TrashIcon" type="TextureButton" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 1160.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 120.0
toggle_mode = true
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="TrashIcon"]
anchor_left = 0.2
anchor_top = 0.143
anchor_right = 0.8
anchor_bottom = 0.857
margin_left = -4.8
margin_top = 1.128
margin_right = 4.8
margin_bottom = -0.127998
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TrashIcon"]
anims/glowup = SubResource( 3 )

[node name="ZoomOut" type="TextureButton" parent="."]
margin_left = 1200.0
margin_top = 200.0
margin_right = 1264.0
margin_bottom = 264.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="ZoomOut"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomIn" type="TextureButton" parent="."]
margin_left = 1200.0
margin_top = 128.0
margin_right = 1264.0
margin_bottom = 192.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="ZoomIn"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer" to="TabContainer" method="_on_TabContainer_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/ScrollContainer" to="TabContainer/ScrollContainer" method="_on_ScrollContainer_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/ScrollContainer" to="TabContainer/ScrollContainer" method="_on_ScrollContainer_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles" to="." method="_on_ItemTiles_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles" to="." method="_on_ItemTiles_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles2" to="." method="_on_ItemTiles_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles2" to="." method="_on_ItemTiles_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles3" to="." method="_on_ItemTiles_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles3" to="." method="_on_ItemTiles_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles4" to="." method="_on_ItemTiles_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles4" to="." method="_on_ItemTiles_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles5" to="." method="_on_ItemTiles_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles5" to="." method="_on_ItemTiles_mouse_exited"]
[connection signal="mouse_entered" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles6" to="." method="_on_ItemTiles_mouse_entered"]
[connection signal="mouse_exited" from="TabContainer/ScrollContainer/VBoxContainer/HBoxContainer/ItemTiles6" to="." method="_on_ItemTiles_mouse_exited"]
